[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-workflow"
version = "1.0.4"
description = "一个类似n8n的Python工作流引擎框架"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "ruamel.yaml>=0.17.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools]
packages = ["stream_workflow", "stream_workflow.core", "stream_workflow.nodes"]
